Fix logo alignment

--- a/assets/style/header.less
+++ b/assets/style/header.less
@@ -4,7 +4,9 @@
 
   .navbar-header {
     float: left;
-    padding-left: inherit;
+    display: inline-block;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
   }
 
   .navbar {
